--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pytest
-pylint
-jupyter
-pytest-cov
-pandas
-nbval
-click
-flask
-requests
-black
+pytest==6.2.5
+pylint==2.12.2
+jupyter==1.0.0
+pytest-cov==3.0.0
+pandas==1.3.5
+numpy
+nbval==0.9.6
+click==8.0.3
+Flask==2.0.2
+black==21.12b0
+gunicorn==20.0.4
