--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,35 @@
-runtime: python39
+name: Mobile Price Range Estimation
+
+on: 
+  push: 
+    branches: [ main ] 
+  pull_request: 
+    branches: [ main ]
+
+runtime: python38
+
+jobs: 
+
+  build: 
+  
+    runs-on: ubuntu-latest
+    
+    steps: 
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with: 
+        python-version: "3.8"
+    - name: Install dependencies
+      run: |
+        make install
+    - name: Install gcloud
+      run: |
+        make gcloud
+    - name: Lint 
+      run: |
+        make lint
+    - name: Deploy
+      run: |
+        make deploy
+    
