--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,17 @@ jobs:
         run: |
           make test
           
-      - name: Run main
-        run: |
-          make run
+  deploy:
+    name: Deploy to App Engine
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Google App Engine
+        uses: google-github-actions/deploy-appengine@v0.4.0
+        with:
+          project_id: ${{secrets.GCP_PROJECT_ID}}
+          version: master
+          credentials: ${{secrets.GCP_KEY}}
+          flags: --no-cache
+          deliverables: app.yaml
